force-app/main/default/objects/Contact/fields/PartnerRank__c.field-meta.xml
<CustomField>
    <fullName>PartnerRank__c</fullName>
    <label>相手先ランク</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>★</fullName>
            </value>
            <value>
                <fullName>★★</fullName>
            </value>
            <value>
                <fullName>★★★</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>