force-app/main/default/objects/Contact/fields/PeriodOfInsurance__c.field-meta.xml
<CustomField>
    <fullName>PeriodOfInsurance__c</fullName>
    <label>保険期間</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>