force-app/main/default/objects/Contact/fields/PhonenumberAllowed__c.field-meta.xml
<CustomField>
    <fullName>PhonenumberAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>電話番号許可</label>
    <type>Checkbox</type>
</CustomField>