force-app/main/default/objects/Contact/fields/PolicyholderName__c.field-meta.xml
<CustomField>
    <fullName>PolicyholderName__c</fullName>
    <label>契約者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>