force-app/main/default/objects/Contact/fields/PolicyholderName_Kana__c.field-meta.xml
<CustomField>
    <fullName>PolicyholderName_Kana__c</fullName>
    <label>契約者名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>