force-app/main/default/objects/Contact/fields/PolicyholderTEL__c.field-meta.xml
<CustomField>
    <fullName>PolicyholderTEL__c</fullName>
    <label>契約者電話番号</label>
    <type>Phone</type>
</CustomField>