force-app/main/default/objects/Contact/fields/RegisteredDate__c.field-meta.xml
<CustomField>
    <fullName>RegisteredDate__c</fullName>
    <label>登録日時</label>
    <type>Date</type>
</CustomField>