force-app/main/default/objects/Contact/fields/RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>営業店関連リスト用項目</description>
    <label>関連先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>営業店メールアドレス</relationshipLabel>
    <relationshipName>RelatedSalesAccount</relationshipName>
    <type>Lookup</type>
</CustomField>