force-app/main/default/objects/Contact/fields/SalesBranchName__c.field-meta.xml
<CustomField>
    <fullName>SalesBranchName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>営業店名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先責任者 (担当営業店名)</relationshipLabel>
    <relationshipName>Acc_Con_Eigyou</relationshipName>
    <type>Lookup</type>
</CustomField>