force-app/main/default/objects/Contact/fields/SecurityNumberBranchNumber__c.field-meta.xml
<CustomField>
    <fullName>SecurityNumberBranchNumber__c</fullName>
    <label>証券番号 枝番</label>
    <length>5</length>
    <type>Text</type>
</CustomField>