force-app/main/default/objects/Contact/fields/SecurityNumberParentNumber__c.field-meta.xml
<CustomField>
    <fullName>SecurityNumberParentNumber__c</fullName>
    <label>証券番号 親番</label>
    <length>14</length>
    <type>Text</type>
</CustomField>