force-app/main/default/objects/Contact/fields/TelephoneNumber_2__c.field-meta.xml
<CustomField>
    <fullName>TelephoneNumber_2__c</fullName>
    <label>電話番号２</label>
    <type>Phone</type>
</CustomField>