force-app/main/default/objects/Contact/fields/TelephoneNumber_3__c.field-meta.xml
<CustomField>
    <fullName>TelephoneNumber_3__c</fullName>
    <label>電話番号３</label>
    <type>Phone</type>
</CustomField>