force-app/main/default/objects/Contact/fields/TermOfInsurance__c.field-meta.xml
<CustomField>
    <fullName>TermOfInsurance__c</fullName>
    <label>保険終期</label>
    <type>Date</type>
</CustomField>