force-app/main/default/objects/Contact/fields/TypeCode__c.field-meta.xml
<CustomField>
    <fullName>TypeCode__c</fullName>
    <label>保険種目コード</label>
    <length>10</length>
    <type>Text</type>
</CustomField>