force-app/main/default/objects/Contact/fields/UnknownNumber__c.field-meta.xml
<CustomField>
    <fullName>UnknownNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>非通知・電話番号登録なし</label>
    <type>Checkbox</type>
</CustomField>