force-app/main/default/objects/Contact/fields/UpdatedTime__c.field-meta.xml
<CustomField>
    <fullName>UpdatedTime__c</fullName>
    <label>更新日時</label>
    <type>Date</type>
</CustomField>