force-app/main/default/objects/Contact/validationRules/PolicyholderTEL_13judgment.validationRule-meta.xml
<ValidationRule>
    <fullName>PolicyholderTEL_13judgment</fullName>
    <active>true</active>
    <description>契約者TELが13文字であるか判定します。</description>
    <errorConditionFormula>AND(Not(IsBlank(PolicyholderTEL__c)) ,NOT(LEN(PolicyholderTEL__c) =13))</errorConditionFormula>
    <errorDisplayField>PolicyholderTEL__c</errorDisplayField>
    <errorMessage>契約者TELは、13文字です。</errorMessage>
</ValidationRule>