force-app/main/default/objects/Contact/validationRules/TypeCode_3judgment.validationRule-meta.xml
<ValidationRule>
    <fullName>TypeCode_3judgment</fullName>
    <active>true</active>
    <description>種目コードが３文字か判定します。</description>
    <errorConditionFormula>AND(Not(IsBlank(TypeCode__c)) ,NOT(LEN(TypeCode__c) = 3 ))</errorConditionFormula>
    <errorDisplayField>TypeCode__c</errorDisplayField>
    <errorMessage>種目コードは３文字です。</errorMessage>
</ValidationRule>